name:                strong-types-and-testing
version:             0.1.0.0
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Email
  build-depends:       base >=4.7 && <4.8,
                       text >=1.2 && <1.3,
                       email-validate >= 2.0.0,
                       either >= 4.3.2,
                       aeson  >= 0.8.0.2,
                       bytestring,
                       hspec,
                       QuickCheck
  hs-source-dirs:      .
  default-extensions:  OverloadedStrings,
                       FlexibleInstances
  default-language:    Haskell2010